# engage_AlearBoonBane_Plugin

./: Cargo.toml  README.md  changes.txt
boon_bane_unity_project/Assets/AddressableAssetsData/AssetGroups/: Built In Data.asset  fe.asset
boon_bane_unity_project/Assets/AnimationClip/: ArrowLRLoop.anim  ArrowTBLoop.anim  ExchangeCursorIdle.anim  FadeClose.anim  FadeClosed.anim  FadeOpen.anim  FadeWait.anim  IconNewIdle.anim  Loop.anim  MenuCursorIdle.anim  MenuCursorIn.anim
boon_bane_unity_project/Assets/AnimatorController/: ArrowLR.controller  ArrowTB.controller  ExchangeCursor.controller  Fade.controller  IconNew.controller  Loop.controller  MenuCursor.controller
boon_bane_unity_project/Assets/Editor/: DivineSettings.settings
boon_bane_unity_project/Assets/Material/: Add.mat  Help SDF Material.mat  Help SDF Material_0.mat  Status SDF Material.mat  System SDF Material.mat  SystemBold SDF Material.mat  SystemBold SDF Outline.mat  SystemBoldJP SDF Material.mat  SystemCN SDF Material.mat  SystemJP SDF Material.mat  SystemKR SDF Material.mat  SystemTW SDF Material.mat
boon_bane_unity_project/Assets/MonoBehaviour/: Color Gradient_Gold.asset
boon_bane_unity_project/Assets/Project/Addressables/Fonts/: Help SDF.asset  HelpBold SDF.asset  Status SDF.asset  System SDF.asset  SystemBold SDF.asset  SystemBoldJP SDF.asset  SystemJP SDF.asset
boon_bane_unity_project/Assets/Resources/: FixAddressableNamesSettings.asset
boon_bane_unity_project/Assets/Scripts/Assembly-CSharp/: BasicMenuClose.cs  BasicMenuClosed.cs  BasicMenuOpen.cs  WwiseBankReference.cs
boon_bane_unity_project/Assets/Sprite/: A.asset  ALL_EUDE.asset  ALL_EUES.asset  ALL_EUFR.asset  ALL_EUIT.asset  ALL_JPJA.asset  AccTicket.asset  Apple.asset  Arrow.asset  ArrowKey.asset  ArrowLarge.asset  Ax.asset  Ax_0.asset  B.asset  Bean.asset  Berry.asset  Bird.asset  BlueStone.asset  Body.asset  Bonds.asset  Border.asset  BorderBothFade.asset  BorderFade.asset  BorderFadeError.asset  BorderOpacity.asset  BorderOpacitySide.asset  BorderOrnament.asset  Bow.asset  Bow_0.asset  Breath.asset  Breath_0.asset  Bullet.asset  Cabbage.asset  Camel.asset  Capture.asset  Cat.asset  ChangeArrow.asset  ChangeSeal.asset  Clothes.asset  Coin.asset  (+173 more)
boon_bane_unity_project/ProjectSettings/: ProjectSettings.asset
fe_assets_ui/title/startmenu/prefabs/: historyroot.bundle
patches/msbt/message/: residentmenu.txt
src/: lib.rs  structs_types.rs
(+40 files in other folders)
