[package]
name = "alear_boon_bane_plugin"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = "0.6"
unity2 = { git = "https://github.com/DivineDragonFanClub/unity2" }
engage-il2cpp = { git = "https://github.com/DivineDragonFanClub/engage-il2cpp", features = [
    "app-basicmenu",
    "app-basicmenuitem",
    "app-capabilitybase_1",
    "app-gamesound",
    "app-gameui",
    "app-gameuserdata",
    "app-gamevariable",
    "app-jobdata",
    "app-mainmenusequence",
    "app-mess",
    "app-netenablesequence",
    "app-pad",
    "app-persondata",
    "app-proc",
    "app-procdesc",
    "app-procinst",
    "app-procvoidfunction",
    "app-procvoidmethod",
    "app-resourcemanager_2",
    "app-singletonclass_1",
    "app-singletonprocinst_1",
    "app-structdata_1",
    "app-titlebar",
    "app-ut",
    "combat-character",
    "system-collections-generic-dictionary_2",
    "system-collections-generic-list_1",
    "system-object",
    "tm_pro-tmp_text",
    "unity_engine-animator",
    "unity_engine-component",
    "unity_engine-gameobject",
    "unity_engine-transform",
] }
cobapi = { git = "https://github.com/DivineDragonFanClub/cobapi" } # Utilities to talk with Cobalt. When new methods are added, you might need to increase the version to use opt-in to them.

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
